# Intro_to_Ros

./: .gitignore  LICENSE  README.md
catkin_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
catkin_ws/src/assignment1/: CMakeLists.txt  README.md
catkin_ws/src/assignment1/inc/: exampleclass.h
catkin_ws/src/assignment1/src/: exampleclass.cpp  publisher.cpp  subscriber.cpp
catkin_ws/src/example_ros_msg/: CMakeLists.txt  package.xml
catkin_ws/src/example_ros_msg/src/: examplerosmessagepublisher.cpp
catkin_ws/src/example_ros_service/: CMakeLists.txt
catkin_ws/src/example_ros_service/src/: exampleclient.cpp  exampleserver.cpp
catkin_ws/src/example_ros_service/srv/: exampleservice.srv
catkin_ws/src/iotsensor/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/robot_cleaner/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/robot_cleaner/launch/: robotcleaner.launch
catkin_ws/src/robot_cleaner/src/: getrobotposition.py  moverobot.py  robot_cleaner.cpp
catkin_ws/src/udemy_opencv/: contours_detection.py  contours_processing.py  image_color.py  image_draw.py  image_encoding.py  image_pub_sub.py  image_structure.py  image_threshold.py  openimage.py  read_video.py
catkin_ws/src/udemy_pubsub/: CMakeLists.txt  package.xml
catkin_ws/src/udemy_pubsub/src/: image_pub_sub.py  listener.py  talker.py
catkin_ws/src/udemy_rosmsg/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/udemy_rosmsg/src/: listener.py  talker.py
catkin_ws/src/udemy_rosservice/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/udemy_rosservice/src/: add_client.py  add_server.py
catkin_ws/src/udemy_rostopic_assigment/: CMakeLists.txt  README.md  package.xml
(+3 files in other folders)
